Added the way of getting data from file uploaded and save data in database
