# src/routes/expenseLogs.ts
@@ -6,11 +6,12 @@ import { checkRoleMiddleware } from "../middlewares/checkRoleMiddleware";
 
 const expenseLogRoutes=Router()
 
-expenseLogRoutes.post("/expenselog",upload.fields([{name:"accommodationFile",maxCount:1},{name:"mealsFile",maxCount:1},{name:"transportFile",maxCount:1}]),checkRoleMiddleware(["employee"]),ExpenseLogController.createExpenseLog);
+expenseLogRoutes.post("/expenselog",upload,checkRoleMiddleware(["employee"]),ExpenseLogController.createExpenseLog);
 expenseLogRoutes.get("/expenselog/:id",checkRoleMiddleware(["employee","manager"]), ExpenseLogController.getExpenseLogById);
-expenseLogRoutes.patch("/expenselog/:id", upload.fields([{name:"accommodationFile",maxCount:1},{name:"mealsFile",maxCount:1},{name:"transportFile",maxCount:1}]), checkRoleMiddleware(["employee"]),ExpenseLogController.updateExpenseLog);
+expenseLogRoutes.patch("/expenselog/:id", upload,checkRoleMiddleware(["employee"]),ExpenseLogController.updateExpenseLog);
 expenseLogRoutes.delete("/expenselog/:id",checkRoleMiddleware(["employee","manager"]), ExpenseLogController.deleteExpenseLog);
 expenseLogRoutes.get("/expenselogs",checkRoleMiddleware(["employee","manager"]), ExpenseLogController.getAllExpenseLogs);
 expenseLogRoutes.get("/expenselogs/mission/:missionId",checkRoleMiddleware(["manager"]), ExpenseLogController.getExpenseLogsByMissionId);
+expenseLogRoutes.patch("/expenselog/status/:id",checkRoleMiddleware(["finance_manager"]), ExpenseLogController.changeExpenseLogStatus);
 
 export default expenseLogRoutes;
